:art:: 기능 합친 후 포맷 개선
- 기존에 만들어진 createNote 포맷에 최대한 맞춰서 제작
- 미사용 import문 제거